--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-dimension": "^1.0.6",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-safe-area-view": "^1.1.1",
